00-mock-exam-questions-v2.0/solution-17/netpool-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80        # service port
      targetPort: 80  # container port
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80        # service port
      targetPort: 80  # container port
  type: ClusterIP
